feat: Local edit & basic printing function
Add links to tools
Remove unnecessary modules

--- a/src/main/style.css
+++ b/src/main/style.css
@@ -2,3 +2,4 @@
 @import "../resources/css/cards.css";
 @import "../resources/css/tags.css";
 @import "../resources/css/groups.css";
+@import "../resources/css/inputs.css";
