--- a/src/resources/css/tags.css
+++ b/src/resources/css/tags.css
@@ -58,6 +58,7 @@
     border-radius: 40px;
     text-wrap: nowrap;
     border-color: transparent;
+    text-decoration: none;
 
     &.accent {
       background-color: var(--button-accent-1);
