--- a/src/resources/scss/body-content.scss
+++ b/src/resources/scss/body-content.scss
@@ -4,10 +4,10 @@
 #bodyContent {
   --body-gap: 20px;
 
-  flex: 1 1 auto;
   margin: 20px auto;
   max-width: $desktop-width;
   height: fit-content;
+  overflow: hidden;
   
   display: grid;
   grid-template-columns: 1fr;
@@ -39,5 +39,13 @@
   }
   .bottom {
     grid-row: 4;
+  }
+}
+
+@media print {
+  #bodyContent {
+    .header {
+      display: none;
+    }
   }
 }
