fix: Cookies are received by backend
Fix animation & layout for editing

--- a/src/main/style.css
+++ b/src/main/style.css
@@ -3,3 +3,4 @@
 @import "../resources/css/tags.css";
 @import "../resources/css/groups.css";
 @import "../resources/css/inputs.css";
+@import "../resources/css/animations.css";
