--- a/src/resources/css/tags.css
+++ b/src/resources/css/tags.css
@@ -21,24 +21,60 @@
   }
 }
 
-/* position */
 .tag {
+  max-width: 100%;
+  font-family: "Poppins";
+
+  p {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-all;
+    white-space: normal;
+    overflow-wrap: break-word;
+
+    .inheritable-input {
+      field-sizing: fixed;
+      height: 100%;
+    }
+  }
+
   &.top-center {
     left: 50%;
     top: 0;
     transform: translate(-50%, -50%);
     position: absolute;
+    max-width: 80%;
+
+    p {
+      white-space: nowrap;
+    }
   }
 }
 
 /* sizes */
 .tag {
+  border: transparent;
+
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 150%;
+
+  p {
+    height: 15px;
+  }
+
   &.small {
     border-radius: 59px;
     padding: 2px 6px;
 
     font-size: 5px;
     font-weight: 500;
+    line-height: 142%;
+
+    p {
+      height: 7px;
+    }
   }
 
   &.medium {
@@ -46,7 +82,11 @@
     padding: 2px 5px;
 
     font-size: 8px;
-    font-weight: 500;
+    font-weight: 400;
+
+    p {
+      height: 12px;
+    }
   }
 }
 
@@ -56,7 +96,6 @@
     padding: 4px 10px;
     background-color: var(--background-inner-1);
     border-radius: 40px;
-    text-wrap: nowrap;
     border-color: transparent;
     text-decoration: none;
 
