--- a/src/resources/css/groups.css
+++ b/src/resources/css/groups.css
@@ -27,11 +27,16 @@
   }
 }
 
-.language-level {
-  background-color: var(--background-accent-1);
-  border-radius: 3px;
-  flex: 1 1 auto;
+.language-level-keeper {
+  display: flex;
+  min-width: 60px;
   max-height: 11px;
+  flex: 1;
+  
+  .language-level {
+    background-color: var(--background-accent-1);
+    border-radius: 3px;
+  }
 }
 
 .vertical-group {
