--- a/src/resources/css/tags.css
+++ b/src/resources/css/tags.css
@@ -11,6 +11,7 @@
       color: var(--text-minor-1);
       padding: 0;
       background-color: transparent;
+      border-radius: 0;
     }
   }
 
@@ -25,18 +26,16 @@
   max-width: 100%;
   font-family: "Poppins";
 
-  p {
-    display: block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    word-break: break-all;
-    white-space: normal;
-    overflow-wrap: break-word;
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  white-space: normal;
+  overflow-wrap: break-word;
 
-    .inheritable-input {
-      field-sizing: fixed;
-      height: 100%;
-    }
+  .inheritable-input {
+    field-sizing: fixed;
+    height: inherit;
   }
 
   &.top-center {
@@ -46,9 +45,7 @@
     position: absolute;
     max-width: 80%;
 
-    p {
-      white-space: nowrap;
-    }
+    white-space: nowrap;
   }
 }
 
@@ -60,9 +57,7 @@
   font-weight: 400;
   line-height: 150%;
 
-  p {
-    height: 15px;
-  }
+  height: 14px;
 
   &.small {
     border-radius: 59px;
@@ -72,9 +67,7 @@
     font-weight: 500;
     line-height: 142%;
 
-    p {
-      height: 7px;
-    }
+    height: 7px;
   }
 
   &.medium {
@@ -84,9 +77,7 @@
     font-size: 8px;
     font-weight: 400;
 
-    p {
-      height: 12px;
-    }
+    height: 12px;
   }
 }
 
