--- a/src/resources/css/tags.css
+++ b/src/resources/css/tags.css
@@ -12,6 +12,9 @@
       padding: 0;
       background-color: transparent;
       border-radius: 0;
+      font-size: 8px;
+      height: 11px;
+      line-height: 150%;
     }
   }
 
