feat: Add Material Waves effect
Fix layout to work with new effect

--- a/src/main/style.css
+++ b/src/main/style.css
@@ -4,3 +4,4 @@
 @import "../resources/css/groups.css";
 @import "../resources/css/inputs.css";
 @import "../resources/css/animations.css";
+@import "../resources/css/ripples.css";
