--- a/src/resources/css/groups.css
+++ b/src/resources/css/groups.css
@@ -105,16 +105,12 @@
 }
 
 .tiles {
-  width: min-content;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 20px 20px;
-  grid-auto-rows: minmax(0, 1fr);
-  gap: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  a {
-    display: flex;
-    justify-content: center;
+  h5 {
+    position: absolute;
   }
 }
 
@@ -127,6 +123,7 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 104%;
+    width: fit-content;
   }
 
   p {
@@ -134,5 +131,6 @@
     font-weight: 500;
     line-height: 150%;
     color: var(--text-subheading-1);
+    width: fit-content;
   }
 }
