--- a/src/resources/scss/cards.scss
+++ b/src/resources/scss/cards.scss
@@ -11,8 +11,12 @@
   text-wrap: wrap;
 
   &.image {
+    background-image: url("/resources/png/profile.png");
+    background-position: center;
+    background-size: cover;
     padding: 0;
-    object-fit: cover;
+    aspect-ratio: 1 / 1;
+    width: 124px;
   }
 
   &.square {
@@ -26,6 +30,8 @@
     gap: 16px;
 
     & > h1, & > h2, & > h3, & > h4, & > h5, & > h6 {
+      width: fit-content;
+
       overflow: hidden;
       text-overflow: ellipsis;
       min-height: fit-content;
@@ -56,6 +62,7 @@
 /* sizes */
 .card {
   &.small {
+    min-width: 116px;
     width: 116px;
     height: fit-content;
     gap: 8px;
@@ -99,16 +106,27 @@
 /* specific */
 .card {
   &.tools-inner {
-    position: relative;
     border-radius: 6px;
     padding: 16px 16px;
     background-color: var(--background-inner-1);
+
+    width: min-content;
+    display: grid;
+    grid-template-columns: 20px 20px;
+    grid-auto-rows: minmax(0, 1fr);
+    gap: 16px;
+
+    a {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   &.your-info {
     h2 {
       font-size: 10px;
       font-weight: 500;
+      width: fit-content;
     }
 
     justify-content: space-between;
@@ -118,6 +136,20 @@
     justify-content: space-between;
     gap: 11px;
     width: auto;
+
+    p {
+      width: fit-content;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      min-height: fit-content;
+      word-break: break-word;
+      white-space: normal;
+      overflow-wrap: break-word;
+    }
+  }
+
+  &.education {
+    min-width: fit-content;
   }
 }
 
@@ -131,10 +163,6 @@
     &.small {
       width: unset;
       min-width: 116px;
-    }
-
-    &.image {
-      flex: 0;
     }
 
     &.education {
