--- a/src/resources/scss/body-content.scss
+++ b/src/resources/scss/body-content.scss
@@ -44,6 +44,7 @@
 
   @media screen and (max-width: $mobile-width) {
     max-width: 100%;
+    margin: 0 auto;;
     & > div {
       flex-wrap: wrap;
     }
