--- a/src/resources/css/base.css
+++ b/src/resources/css/base.css
@@ -1,6 +1,5 @@
 @import "../scss/body-content.scss";
-@import "../scss/header.scss";
-@import "../scss/window.scss";
+@import "colors.css";
 
 * {
   padding: 0;
