--- a/src/resources/css/groups.css
+++ b/src/resources/css/groups.css
@@ -44,6 +44,11 @@
   flex-direction: column;
   gap: 12px;
 
+  pointer-events: none;
+  & > * {
+    pointer-events: auto;
+  }
+
   &.small {
     gap: 10px;
   }
@@ -66,14 +71,25 @@
   display: flex;
   flex-direction: row;
   gap: 16px;
+
+  pointer-events: none;
+  & > * {
+    pointer-events: auto;
+  }
 }
 
 .bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   img {
     width: 11px;
+  }
+
+  pointer-events: none;
+  & > * {
+    pointer-events: auto;
   }
 }
 
@@ -91,6 +107,11 @@
     gap: 6px;
     color: var(--text-superminor-1);
   }
+
+  pointer-events: none;
+  & > * {
+    pointer-events: auto;
+  }
 }
 
 
@@ -98,10 +119,20 @@
   display: flex;
   flex-direction: column;
 
+  pointer-events: none;
+  & > * {
+    pointer-events: auto;
+  }
+
   h2 {
     line-height: 150%;
     font-weight: 500;
     font-size: 10px;
+
+    overflow: hidden;
+    word-break: break-word;
+    width: fit-content;
+    min-height: fit-content;
   }
 }
 
